# pepc

./: .darglint2  .gitignore  .markdownlint.jsonc  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md  SECURITY.md  __main__.py  emulation-data-generator  install-pepc  make-a-release  make-standalone  make_a_release.sh  msr-ioscope  pepc  pyproject.toml  setup.py  tpmi-spec-files-generator
.github/: CODEOWNERS  copilot-instructions.md
debian/: changelog  control  copyright  manpages  pepc.install  python3-pepc.install  rules
docs/: code-conventions.rst  coding-style.rst  guide-aspm.md  guide-cpu-hotplug.md  guide-cstates.md  guide-examples.md  guide-install.md  guide-main.md  guide-pmqos.md  guide-pstates.md  guide-tests.md  guide-topology.md  guide-tpmi.md  guide-uncore.md  misc-c1e-cpu-freq.md  misc-c6p-c6sp.md  misc-cpu-base-freq.md  misc-cstate-namespaces.md  misc-msr-scope.md  misc-tsc-amperf.md  misc-uncore-elc.md  patches-and-commits.rst  pepc-aspm.rst  pepc-cpu-hotplug.rst  pepc-cstates.rst  pepc-man.rst  pepc-pmqos.rst  pepc-power.rst  pepc-pstates.rst  pepc-topology.rst  pepc-tpmi.rst  pepc-uncore.rst  project-conventions.rst  readme.txt
misc/: TPMIXMLConvert.py  _Changelogmd.py  ai-style.md  changelog_md_to_debian  code-style.md  convert_changelog  install-pepc.sh  make_a_release.sh  prepare_changelog_md  readme.txt  tpmi-spec-files-generator
pepclibs/: ASPM.py  BClock.py  CPUFreq.py  CPUIdle.py  CPUInfo.py  CPUInfoTypes.py  CPUInfoVars.py  CPUModels.py  CPUOnline.py  CStates.py  CStatesVars.py  EPB.py  EPP.py  LsPCI.py  NonCompDies.py  OldPStates.py  PMQoS.py  PMQoSVars.py  PStates.py  PStatesVars.py  Power.py  ProcCpuinfo.py  Props.py  PropsTypes.py  TPMI.py  TPMIVars.py  Tpmi.py  Uncore.py  UncoreFreq.py  (+33 more)
(+1656 files in other folders)
