[project]
name = "pepc"
version = "1.6.12"
description = "A tool for configuring power and performance aspects of a Linux system."
authors = [
    { name = "Artem Bityutskiy", email = "dedekind@gmail.com" }
]
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
readme = "README.md"
keywords = ["linux", "power", "performance", "configuration", "C-state", "P-state"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: System :: Operating System Kernels :: Linux",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: remove 'importlib-resources' dependency when switching to Python 3.10+.
# It is there only because of Python 3.9.
dependencies = [
    "argcomplete",
    "colorama",
    "importlib-resources",
    "paramiko",
    "pyyaml",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "misc*"]

[tool.setuptools.package-data]
pepcdata = ["tpmi/*.yml", "man/man1/*.1"]

[project.scripts]
pepc = "pepctools._Pepc:main"

[project.urls]
Documentation = "https://github.com/intel/pepc/blob/main/README.md"
Repository = "https://github.com/intel/pepc"
Changelog = "https://github.com/intel/pepc/blob/main/CHANGELOG.md"

[tool.uv]
package = false

[tool.ruff.lint]
# F401 = unused-import, disable because pylint checks for this too, and it is
# more convenient to add exceptions for pylint than for ruff.
ignore = ["F401"]

[tool.pydoclint]
style = 'google'
exclude = '\.git'
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-raises = true

[tool.mypy]
check_untyped_defs = true
